Pumkin now makes his grand enterance

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div id="viewport-size"></div>
   <div id="wall">
     <b id="door">&#x1F6AA;</b>
   </div>
+  <div id="pumkin-area"></div>
   <div id="counter"></div>
   <div id="food-area"></div>
 </body>
