containers and such

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Emoji-kin</title>
   <link rel="stylesheet" href="style.css">
+  <script src="food.js"></script>
   <script src="game.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -11,7 +12,7 @@
   <div id="wall">
     <b id="door">&#x1F6AA;</b>
   </div>
-  <div id="pumkin-area"></div>
+  <div id="pumkin-area" class="emoji-container"></div>
   <div id="counter"></div>
   <div id="food-area"></div>
 </body>
