game actually works now!

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <div id="score">0</div>
   <div id="wall">
     <b id="door">&#x1F6AA;</b>
   </div>
   <div id="pumkin-area" class="emoji-container"></div>
-  <div id="counter"></div>
+  <div id="counter">
+    <div id="active-food-area" class="food-container"></div>
+  </div>
   <div id="food-area"></div>
 </body>
 </html>
